tests/ui/error-codes/E0184.stderr
error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/E0184.rs:2:8
   |
LL | #[derive(Copy)]
   |          ---- in this derive macro expansion
LL | struct Foo;
   |        ^^^ `Copy` not allowed on types with destructors
   |
note: destructor declared here
  --> $DIR/E0184.rs:5:5
   |
LL |     fn drop(&mut self) {
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0184`.
